@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.5-08
-Date: 2012-10-3
+Version: 1.5-09
+Date: 2012-10-13
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <suyusung@tsinghua.edu.cn>,
