@@ -1,3 +1,8 @@
+2012-10-13 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
+   * DESCRIPTION (Version, Date): 1.5-09
+   * R/coefplot: fix an issue in coefplot.  No longer reset par when exit.
+   * R/bayesglm: fix an issue in dev and family$state$valideta, family$state$mu
+
 2012-10-03 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
    * DESCRIPTION (Version, Date): 1.5-08
    * R/bayesglm: fix various bugs in bayesglm
